[iOS] Update NTP Reading List a11y label to include unread article count

This CL updates ContentSuggestionsMostVisitedActionItem to support
custom a11y labels that differ from their titles, and adds a custom
label for the Reading List cell that states the number of unread
articles.

Bug: 862299
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: I972b5996fb3398154f656b8ea056b9028d468af0
Reviewed-on: https://chromium-review.googlesource.com/1137027
Commit-Queue: Kurt Horimoto <kkhorimoto@chromium.org>
Reviewed-by: Justin Cohen <justincohen@chromium.org>
Reviewed-by: Gauthier Ambard <gambard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#575860}
Former-commit-id: ee1229d3efe8303829fb4dd046634e7b9b8569a3