ios/chrome/browser/ui/content_suggestions/cells/content_suggestions_most_visited_action_item.mm
@@ -4,6 +4,9 @@
 
 #import "ios/chrome/browser/ui/content_suggestions/cells/content_suggestions_most_visited_action_item.h"
 
+#include "base/logging.h"
+#include "base/strings/sys_string_conversions.h"
+#include "base/strings/utf_string_conversions.h"
 #import "ios/chrome/browser/ui/content_suggestions/cells/content_suggestions_most_visited_action_cell.h"
 #include "ios/chrome/grit/ios_strings.h"
 #include "ui/base/l10n/l10n_util.h"
@@ -19,6 +22,7 @@
 @synthesize metricsRecorded = _metricsRecorded;
 @synthesize suggestionIdentifier = _suggestionIdentifier;
 @synthesize title = _title;
+@synthesize accessibilityLabel = _accessibilityLabel;
 
 - (instancetype)initWithAction:(ContentSuggestionsMostVisitedAction)action {
   self = [super initWithType:0];
@@ -30,13 +34,30 @@
   return self;
 }
 
+#pragma mark - Accessors
+
+- (void)setTitle:(NSString*)title {
+  if ([_title isEqualToString:title])
+    return;
+  _title = title;
+  [self updateAccessibilityLabel];
+}
+
+- (void)setCount:(NSInteger)count {
+  if (_count == count)
+    return;
+  _count = count;
+  [self updateAccessibilityLabel];
+}
+
 #pragma mark - AccessibilityCustomAction
 
 - (void)configureCell:(ContentSuggestionsMostVisitedActionCell*)cell {
   [super configureCell:cell];
   cell.accessibilityCustomActions = nil;
   cell.titleLabel.text = self.title;
-  cell.accessibilityLabel = self.title;
+  cell.accessibilityLabel =
+      self.accessibilityLabel.length ? self.accessibilityLabel : self.title;
   cell.iconView.image = [self imageForAction:_action];
   if (self.count != 0) {
     cell.countLabel.text = [@(self.count) stringValue];
@@ -54,6 +75,7 @@
 
 #pragma mark - Private
 
+// Returns the title to use for a cell with |action|.
 - (NSString*)titleForAction:(ContentSuggestionsMostVisitedAction)action {
   switch (action) {
     case ContentSuggestionsMostVisitedActionBookmark:
@@ -67,6 +89,7 @@
   }
 }
 
+// Returns the image to use for a cell with |action|.
 - (UIImage*)imageForAction:(ContentSuggestionsMostVisitedAction)action {
   switch (action) {
     case ContentSuggestionsMostVisitedActionBookmark:
@@ -78,6 +101,32 @@
     case ContentSuggestionsMostVisitedActionHistory:
       return [UIImage imageNamed:@"ntp_history_icon"];
   }
+}
+
+// Updates self.accessibilityLabel based on the current property values.
+- (void)updateAccessibilityLabel {
+  // Resetting self.accessibilityLabel to nil will prompt self.title to be used
+  // as the default label.  This default value should be used if:
+  // - the cell is not for Reading List,
+  // - there are no unread articles in the reading list.
+  if (self.action != ContentSuggestionsMostVisitedActionReadingList ||
+      self.count <= 0) {
+    self.accessibilityLabel = nil;
+    return;
+  }
+
+  BOOL hasMultipleArticles = self.count > 1;
+  int messageID =
+      hasMultipleArticles
+          ? IDS_IOS_CONTENT_SUGGESTIONS_READING_LIST_ACCESSIBILITY_LABEL
+          : IDS_IOS_CONTENT_SUGGESTIONS_READING_LIST_ACCESSIBILITY_LABEL_ONE_UNREAD;
+  if (hasMultipleArticles) {
+    self.accessibilityLabel = l10n_util::GetNSStringF(
+        messageID, base::SysNSStringToUTF16([@(self.count) stringValue]));
+  } else {
+    self.accessibilityLabel = l10n_util::GetNSString(messageID);
+  }
+  DCHECK(self.accessibilityLabel.length);
 }
 
 @end
